# nustage

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  PSV.md  QUICKSTART.md  README.md  example_output.xlsx  golden-prompt_a-hole.md  nushell-sandbox-spe.md  report_output.csv
.github/workflows/: ci.yml
ServiceOrderMargin/rust_scripts/: Cargo.toml  QUICKSTART.md  README.md  build.bat  build.sh  gl_tie_out.rs
docs/: IRONCALC_INTEGRATION.md
docs/integration/: README.md
docs/releases/: VERSION_0.1.2_RELEASE_NOTES.md
examples/: ironcalc_integration.rs  power_query_workflow.rs  simple_demo.rs
nu-sandbox/: QUICKSTART.md  README.md  run.nu
nu-sandbox/lessons/: 01_tables.nu  02_pipelines.nu  03_to_md.nu  04_dashboard.nu  05_watch.nu  06_nustage_bridge.nu
nu-sandbox/outputs/: .gitkeep
nu-sandbox/scripts/: dashboard.nu  nustage_probe_summary.nu
roadmap/: COMPREHENSIVE_ROADMAP.md  PROJECT_ROADMAP.md  WASM_POWERQUERY_ROADMAP.md  Zed excel viewer extension using ironcalc  implementation.md  inspired_by.md
src/: data.rs  export.rs  ironcalc.rs  lib.rs  main.rs  sidecar.rs  test_data_loader.rs  transformations.rs  tui.rs  tui_grid.rs  wasm.rs
src/cli/: mod.rs
src/data/: mod.rs
src/ironcalc/: mod.rs
src/mcode/: mod.rs
src/sidecar/: mod.rs
src/transformations/: mod.rs
src/transformations_backup/: mod.rs.bak
src/zellij_tile/zellij_utils/: Cargo.toml
src/zellij_tile/zellij_utils/src/: lib.rs
state-docs/: nustage-state.md
test_data/: expenses.csv  people.csv  sales.csv
web/: app.js  styles.css
zellij-tile/: Cargo.toml  INTEGRATION_GUIDE.md  INTEGRATION_SUMMARY.md  QUICKSTART.md  README.md  zellij_tile.toml
zellij-tile/layouts/example.zellij/layouts/: data_workspace.kdl
zellij-tile/src/: lib.rs  main.rs
