[package]
name = "nustage"
version = "0.1.0"
edition = "2024"

[dependencies]
# TUI Framework
ratatui = "0.29"

# Data Processing
duckdb = { version = "1.1", features = ["bundled"] }
calamine = "0.33"
polars = { version = "0.53", features = ["parquet", "csv"] }

# CLI Argument Parsing
clap = { version = "4.5", features = ["derive"] }

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Data Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
