[package]
name = "nustage"
version = "0.1.3"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nustage"
path = "src/main.rs"

[lib]
name = "nustage"
path = "src/lib.rs"

[dependencies]
# Data Processing
polars = { version = "0.53", features = ["parquet", "csv", "lazy", "temporal", "round_series"] }

# CLI Argument Parsing
clap = { version = "4.5", features = ["derive"] }

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Data Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["serde", "v4"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
